# lgtk-plot-demo

./: LICENSE  README.md  TODO  changelog  lgtk-plot-demo.cabal
src/: Main.hs
src/Data/Attoparsec/: Expression.hs
src/LGtk/Demos/PlotDemo/: ArithParser.hs  Evaluator.hs  Lexer.hs  Main.hs  Parser.hs  Plot.hs
